website/versioned_docs/version-2.11.x/reference/subsystems/scalac.mdx
---
title: scalac
---

import Option from "@site/src/components/reference/Option";
import styles from "@site/src/components/reference/styles.module.css";

---

The Scala compiler.

Backend: <span className="color--primary">`pants.backend.experimental.scala`</span>

Config section: <span className="color--primary">`[scalac]`</span>

<span className={styles.options}>

## Basic options

### `args`

<Option
  cli_repr={`--scalac-args="[<shell_str>, <shell_str>, ...]"`}
  env_repr="PANTS_SCALAC_ARGS"
  default_repr={`[]`}
>
  Arguments to pass directly to scalac, e.g. `--scalac-args='-encoding UTF-8'`.
</Option>

### `plugins_for_resolve`

<Option
  cli_repr={`--scalac-plugins-for-resolve="{'key1': val1, 'key2': val2, ...}"`}
  env_repr="PANTS_SCALAC_PLUGINS_FOR_RESOLVE"
  default_repr={`{}`}
>
  A dictionary, whose keys are the names of each JVM resolve that requires
  default `scalac` plugins, and the value is a comma-separated string consisting
  of scalac plugin names. Each specified plugin must have a corresponding
  `scalac_plugin` target that specifies that name in either its `plugin_name`
  field or is the same as its target name.
</Option>

## Advanced options

None

## Deprecated options

### `plugins_global`

<Option
  cli_repr={`--scalac-plugins-global="['<str>', '<str>', ...]"`}
  env_repr='PANTS_SCALAC_PLUGINS_GLOBAL'
  default_repr={`[]`}
  removal_version='2.12.0.dev0'
  removal_hint={'Use `--scalac-plugins-for-resolve` instead to use user resolves'}
>
A list of addresses of `scalac_plugin` targets which should be used for compilation of all Scala targets in a build.

If you set this, you must also set `[scalac].plugins_global_lockfile`.

</Option>

### `plugins_global_lockfile`

<Option
  cli_repr={`--scalac-plugins-global-lockfile=<str>`}
  env_repr="PANTS_SCALAC_PLUGINS_GLOBAL_LOCKFILE"
  default_repr={`<default>`}
  removal_version="2.12.0.dev0"
  removal_hint={
    "Use `--scalac-plugins-for-resolve` instead, which will add plugin dependencies to JVM user resolves."
  }
>
  The filename of the lockfile for global plugins. You must set this option to a
  file path, e.g. &#x27;3rdparty/jvm/global_scalac_plugins.lock&#x27;, if you
  set `[scalac].plugins_global`.
</Option>

</span>

